@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.3
+Release: 0.4
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -493,6 +493,10 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Fri Nov 19 2004 Jeff Johnson <jbj@jbj.org> 4.4-0.4
+- remove noNeon runtime switch, http through neon only.
+- remove http put to be able to build against upstream neon.
+
 * Thu Nov 11 2004 Jeff Johnson <jbj@jbj.org> 4.4-0.3
 - neon used by default for http/https transport.
 - add --delsign to purge packages of digital signatures.
